[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sluice-llm"
version = "0.1.0"
description = "Priority-queue LLM router for Apple Silicon. Prevents GPU OOM by serializing inference."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "zemo-g" },
]
keywords = ["llm", "mlx", "apple-silicon", "priority-queue", "inference", "router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.39.0"]

[project.scripts]
sluice = "sluice.server:main"

[project.urls]
Homepage = "https://github.com/zemo-g/sluice"
Issues = "https://github.com/zemo-g/sluice/issues"
